psd: fix reading of layer blending ranges

Freya Lupen's comment regarding a bad check was spot on. Let's add some
hardening while at it, too.

BUG: 459307
(cherry picked from commit bb28090652d3839d00e0ef0f80bce8c03fb0b484)